# Jarvis

./: .clineignore  .dockerignore  .env.example  .gitignore  .prettierrc.json  ANALISE-MIGRACAO-LLAMACPP.md  CHANGELOG.md  CMakeLists.txt  CONTEXTO-ATUAL.md  CONTRIBUTING.md  Concepts.md  Dockerfile  Dockerfile.dev  HOW-TO-START.md  INITIALIZE.md  MIGRACAO_PYTHON.md  PLANO_IMPLEMENTACAO.md  Project.md  README.md  ROADMAP.md  bugs-ajustes-e-novas-features.md  bugs.md  build.sh  build_installer.bat  build_rls.bat  dev_run.ps1  docker-compose.yml  package-lock.json  package.json  session-ses_1594.md  tsconfig.json  vite.config.ts  vitest.config.ts
.context/: 2026-06-03-002-estrutura-novo-projeto.md  2026-06-03-003-ui-hibrida-webengine-react.md  2026-06-03-005-skills-contexto-unificado.md  2026-06-03-009-testes-integrados.md  2026-06-05-012-migracao-python-pywebview.md  HANDOFF.md  (+18 more)
.oldC++/kernel/: CMakeLists.txt
.oldC++/kernel/include/jarvis/ai/: agents_manager.h  models_manager.h  ollama_client.h  orchestration_manager.h
.oldC++/kernel/include/jarvis/api/: module_api.h
.oldC++/kernel/include/jarvis/bridge/: web_channel.h
.oldC++/kernel/include/jarvis/core/: permission_manager.h
.oldC++/kernel/include/jarvis/editor/: editor_manager.h
.oldC++/kernel/include/jarvis/git/: git_manager.h
.oldC++/kernel/include/jarvis/knowledge/: knowledge_manager.h  search_engine.h
.oldC++/kernel/include/jarvis/network/: network_manager.h
.oldC++/kernel/include/jarvis/persistence/: database.h  query_builder.h
.oldC++/kernel/include/jarvis/terminal/: terminal_manager.h
.oldC++/kernel/include/jarvis/workspace/: file_utils.h  file_watcher.h  project.h  workspace_manager.h
.oldC++/kernel/resources/qml/: main.qml
.oldC++/kernel/resources/sql/: 004-models-agents.sql  006-workspace.sql
.oldC++/kernel/resources/webui/: index.html
.oldC++/kernel/resources/webui/assets/: EditorPanel-fs9NrIly.js.map  KnowledgePanel-v20_mI2-.js.map  SettingsPage-BaQh285T.js.map  WorkspacePanel-CAb4boPV.js.map  abap-DLDM7-KI.js.map  apex-DNDY2TF8.js.map  azcli-Y6nb8tq_.js.map  bat-BwHxbl9M.js.map  bicep-CFznDFnq.js.map  cameligo-Bf6VGUru.js.map  clojure-Dnu-v4kV.js.map  coffee-Bd8akH9Z.js.map  cpp-BbWJElDN.js.map  csharp-Co3qMtFm.js.map  csp-D-4FJmMZ.js.map  css-DdJfP1eB.js.map  cssMode-DaiSSaOS.js.map  cypher-cTPe9QuQ.js.map  dart-BOtBlQCF.js.map  dockerfile-BG73LgW2.js.map  ecl-BEgZUVRK.js.map  editor.main-RgOpfNgf.js  elixir-BkW5O-1t.js.map  flow9-BeJ5waoc.js.map  freemarker2-DLVJu-1U.js  freemarker2-DLVJu-1U.js.map  fsharp-PahG7c26.js.map  go-acbASCJo.js.map  graphql-BxJiqAUM.js.map  handlebars-DKKz8prH.js  handlebars-DKKz8prH.js.map  hcl-DtV1sZF8.js.map  html-51SQUiZc.js.map  htmlMode-EfGlp5kk.js.map  index-C9gPVPOD.js  index-C9gPVPOD.js.map  ini-Kd9XrMLS.js.map  java-CXBNlu9o.js.map  javascript-ByVALeeO.js.map  jsonMode-C2UI2DOb.js.map  (+62 more)
.oldC++/kernel/src/: lifecycle.cpp  main.cpp  module_loader.cpp  permission_manager.cpp
.oldC++/kernel/src/ai/: agents_manager.cpp  models_manager.cpp  orchestration_manager.cpp
.oldC++/kernel/src/bridge/: web_channel.cpp
.oldC++/kernel/src/editor/: editor_manager.cpp
.oldC++/kernel/src/git/: git_manager.cpp
.oldC++/kernel/src/knowledge/: knowledge_manager.cpp
.oldC++/kernel/src/network/: network_manager.cpp
.oldC++/kernel/src/persistence/: backup_manager.cpp  database.cpp  query_builder.cpp
.oldC++/kernel/src/terminal/: terminal_manager.cpp
.oldC++/kernel/src/workspace/: file_utils.cpp  file_watcher.cpp
.oldC++/kernel/tests/: test_database.cpp  test_editor.cpp  test_module_loader.cpp  test_service_locator.cpp
backend/: pyproject.toml
backend/jarvis/: agents_manager.py  audio_gen.py  audio_tts.py  background_agents.py  bridge.py  calendar_service.py  camera_service.py  chat_manager.py  database.py  document_generator.py  document_service.py  editor_manager.py  email_service.py  gguf_manager.py  git_manager.py  github_service.py  graph_builder.py  homeassistant_service.py  image_service.py  knowledge_manager.py  llm_gateway.py  llm_router.py  logging_config.py  main.py  mcp_manager.py  memory_service.py  microservices.py  migration_runner.py  models_manager.py  module_loader.py  network_manager.py  ocr_service.py  ollama_client.py  orchestration_manager.py  output_manager.py  plugin_system.py  rag_service.py  security_manager.py  self_improvement.py  terminal_manager.py  (+9 more)
backend/jarvis/grammars/: tool_call.gbnf
backend/tests/: test_agents_manager.py  test_database.py  test_graph_builder.py  test_knowledge_manager.py  test_llm_gateway.py  test_migration_runner.py  test_models_manager.py  test_ollama_client.py  test_orchestration_manager.py
kernel/: CMakeLists.txt
kernel/include/jarvis/ai/: agents_manager.h  models_manager.h  ollama_client.h  orchestration_manager.h
kernel/include/jarvis/core/: module_loader.h  service_locator.h
kernel/include/jarvis/knowledge/: graph_builder.h  knowledge_manager.h  note.h  search_engine.h
kernel/include/jarvis/network/: network_manager.h
kernel/include/jarvis/persistence/: backup_manager.h  migration_runner.h  repository.h
kernel/include/jarvis/workspace/: workspace_manager.h
kernel/resources/sql/: 001-core.sql  002-permissions.sql  003-extensions.sql  005-knowledge.sql
kernel/src/: main.cpp  module_loader.cpp  service_locator.cpp
kernel/src/ai/: ollama_client.cpp
kernel/src/bridge/: web_channel.cpp
kernel/src/editor/: editor_manager.cpp
kernel/src/knowledge/: graph_builder.cpp  knowledge_manager.cpp  search_engine.cpp
kernel/src/network/: network_manager.cpp
kernel/src/persistence/: database.cpp  migration_runner.cpp  repository.cpp
kernel/src/terminal/: terminal_manager.cpp
kernel/src/workspace/: file_utils.cpp  file_watcher.cpp  workspace_manager.cpp
kernel/tests/: test_database.cpp  test_knowledge.cpp  test_migration_runner.cpp  test_module_loader.cpp  test_workspace.cpp
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/security/: mod.rs
src-tauri/src/storage/: mod.rs
src-tauri/src/workspace/: mod.rs
(+606 files in other folders)
