[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvis-backend"
version = "0.1.0"
description = "JARVIS AI Assistant - Python Backend"
requires-python = ">=3.11"
dependencies = [
    "pywebview>=5,<6",
    "httpx>=0.28,<1",
    "websockets>=14,<15",
    "gitpython>=3.1,<4",
    "watchdog>=6,<7",
    "cryptography>=44,<45",
    "pyte>=0.8,<0.9",
    "ruamel.yaml>=0.18,<0.19",
    "huggingface-hub>=0.27,<1",
    "PyMuPDF>=1.25,<2",
    "python-docx>=1.1,<2",
    "openpyxl>=3.1,<4",
]

[project.optional-dependencies]
native = [
    "llama-cpp-python>=0.3,<1",
]
audio = [
    "faster-whisper>=1.1,<2",
]
ocr = [
    "pytesseract>=0.4,<1",
    "Pillow>=11,<12",
]
caldav = [
    "caldav>=1.0,<2",
]
dev = [
    "pytest>=8,<9",
    "pytest-cov>=6,<7",
    "ruff>=0.9,<1",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
