[package]
name = "jarvis"
version = "0.1.0"
description = "JARVIS desktop IDE"
authors = ["JARVIS contributors"]
edition = "2021"

[lib]
name = "jarvis_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
tauri = { version = "2.11.2", features = [] }
